--- a/templates/protocol/_sidenav.html.twig
+++ b/templates/protocol/_sidenav.html.twig
@@ -23,19 +23,19 @@
         <hr class="w-50">
         <li class="nav-link">
             <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="modeWeek" value="option1" checked>
+            <input class="form-check-input" type="radio" name="exampleRadios" id="byWeek" value="option1" checked>
             <label class="form-check-label" for="modeWeek">
-                per week
+                Week
             </label>
             </div>
             <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="modeDay" value="option2">
+            <input class="form-check-input" type="radio" name="exampleRadios" id="byDay" value="option2">
             <label class="form-check-label" for="modeDay">
-                per day
+                Day
             </label>
             </div>
         </li>
         <li>
-        {{form(searchForm)}}
+        {% include "protocol/_filter.html.twig" %}
         </li>
     </ul>
