--- a/templates/protocol.html.twig
+++ b/templates/protocol.html.twig
@@ -332,5 +332,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script type="text/javascript" src="{{ asset('js/protocol.js')}}"></script>
+    <script type="text/javascript" src="{{ asset('js/protocol_copy.js')}}"></script>
 {% endblock %}
